Fixes odd spacing issue

--- a/css/0980.css
+++ b/css/0980.css
@@ -352,7 +352,6 @@ section.col-30-60 > div {
 section.col-30-60 .col-30 {
 	width: 30%;
 	margin-left: 10%;
-	margin-top: -6em;
 }
 
 section.col-30-60 .col-60 {
